--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,35 +2,21 @@ name: Update README with Latest Activity
 
 on:
   schedule:
-    - cron: "*/30 * * * *"   # updates every 30 mins
+    - cron: "0 */12 * * *"   # every 12 hours
   workflow_dispatch:
 
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
 jobs:
-  update-readme:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Update GitHub Activity
-        uses: Readme-Workflows/recent-activity@v2
+      - name: Update activity
+        uses: jamesgeorge007/github-activity-readme@v0.4.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Commit files
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "⚡ Update README with recent activity"
-
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          COMMIT_MSG: "🔄 Update README with recent activity"
+          MAX_LINES: 10
